# ChangeLog for sys-kernel/gentoo-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.690 2010/04/09 19:09:41 armin76 Exp $

  09 Apr 2010; Raúl Porcel <armin76@gentoo.org>
  gentoo-sources-2.6.32-r7.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #307847

*gentoo-sources-2.6.33-r1 (09 Apr 2010)

  09 Apr 2010; Mike Pagano <mpagano@gentoo.org>
  +gentoo-sources-2.6.33-r1.ebuild:
  Linux patches 2.6.33.1 and 2.6.33.2. Fix for alpha uac patch.

  08 Apr 2010; Christian Faulhammer <fauli@gentoo.org>
  gentoo-sources-2.6.32-r7.ebuild:
  stable x86, bug 307847

  05 Apr 2010; Jeroen Roovers <jer@gentoo.org>
  gentoo-sources-2.6.31-r10.ebuild:
  Stable for HPPA (bug #305733).

*gentoo-sources-2.6.32-r8 (01 Apr 2010)

  01 Apr 2010; Mike Pagano <mpagano@gentoo.org>
  +gentoo-sources-2.6.32-r8.ebuild:
  Linux patch 2.6.32.10

  11 Mar 2010; Markos Chandras <hwoarang@gentoo.org>
  gentoo-sources-2.6.31-r10.ebuild:
  Stable wrt bug #305733

  25 Feb 2010; Raúl Porcel <armin76@gentoo.org>
  gentoo-sources-2.6.31-r10.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #305733

*gentoo-sources-2.6.33 (25 Feb 2010)

  25 Feb 2010; Michael Pagano <mpagano@gentoo.org>
  +gentoo-sources-2.6.33.ebuild:
  Initial 2.6.33 release including the fbcondecor patch, a patch to enable
  control of the unaligned access control policy from sysctl and a patch for
  bad block relocation support for LiveCD users.

*gentoo-sources-2.6.32-r7 (24 Feb 2010)

  24 Feb 2010; Mike Pagano <mpagano@gentoo.org>
  +gentoo-sources-2.6.32-r7.ebuild:
  Includes linux patch 2.6.32.9

  23 Feb 2010; Joseph Jezak <josejx@gentoo.org>
  gentoo-sources-2.6.31-r10.ebuild:
  Marked ppc/ppc64 stable for bug #305733.

  22 Feb 2010; Christian Faulhammer <fauli@gentoo.org>
  gentoo-sources-2.6.31-r10.ebuild:
  stable x86, bug 305733

  21 Feb 2010; Michael Pagano <mpagano@gentoo.org>