@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST genpatches-2.6.16-15.base.tar.bz2 98632 RMD160 46e8cfcae8fea262d7599c2e4d3e7fbc8af239b2 SHA1 e0f253ad01a4da388675af4b90223289d9bcd578 SHA256 fb78f2a4d32d1770a34d9ee254686a6a12102fa99c1bb73e9c282ab5f82dddaa
 DIST genpatches-2.6.16-15.extras.tar.bz2 137758 RMD160 4800c6612a3d9f1c2d7f4af923ae5c254416fbcb SHA1 29ed0dd9dc7965b4755048792eee33aea38d5311 SHA256 6ce07f500b9b76a988d2384cb7fd73dda70543f9a6429f5ffea1ea737c534fad
 DIST genpatches-2.6.25-11.base.tar.bz2 137951 RMD160 c8df40098760d8796e653140cbb1df1ec7f42ab7 SHA1 bd94c26d6246279ed53042523de99ebaf13dd6e8 SHA256 a651296c2aa446665211c4e4de304e47f765dc2f21a4b20251ebeeb1cb1b2c83
@@ -18,26 +21,10 @@ DIST genpatches-2.6.29-8.base.tar.bz2 135449 RMD160 ae096b9cb7741c0117a57767121a
 DIST genpatches-2.6.29-8.extras.tar.bz2 24650 RMD160 83ff041d4116b2364ab0dc1942c16c8395f9e08c SHA1 e3b480ff3c4b34907df9c21759c9e594774a700e SHA256 056665a12ef74884943c5e933cf68468f4101da4f9786c8db0222fe374b8273f
 DIST genpatches-2.6.30-10.base.tar.bz2 146474 RMD160 9afe48159c09b89b66133365e99455e821bb5434 SHA1 9d3c0e34a05a0fd2848422f35df839fc15b38425 SHA256 ef5fa03f8ee9bbb09b0c121a6bd6ca1ef7f82743ba05c47b380d52933f381a37
 DIST genpatches-2.6.30-10.extras.tar.bz2 24978 RMD160 95e44fd010bf659a59087b91d95c7982e6877b3e SHA1 de8e4cc7fac2f445ac077928b868c4474c7a3012 SHA256 faaad5a9cf5c92d6d97843aed4cee8c20d431e9542628410cb0c75b7ea51bc88
-DIST genpatches-2.6.30-6.base.tar.bz2 75248 RMD160 7eaea6cdc1aa283ad7926e2370ccc807b2e8778f SHA1 f14ead72994d35b4e417d294ff55f16c51cd18cb SHA256 e43d166b73a219f35936a13981b8ad22a99eb20112daacab2fb782ab3af92216
-DIST genpatches-2.6.30-6.extras.tar.bz2 24978 RMD160 95e44fd010bf659a59087b91d95c7982e6877b3e SHA1 de8e4cc7fac2f445ac077928b868c4474c7a3012 SHA256 faaad5a9cf5c92d6d97843aed4cee8c20d431e9542628410cb0c75b7ea51bc88
 DIST genpatches-2.6.30-9.base.tar.bz2 145203 RMD160 c2bace7702cb06ce572ffd60047af377a18ab7ac SHA1 6211d5960d076794e8827f4c7a80495171ffa770 SHA256 1dd14231f1d673be7ea8879b9c3e35a2dde8199df166fd3f7219235ba3fdec4a
 DIST genpatches-2.6.30-9.extras.tar.bz2 24950 RMD160 eb954020a4653cc90018649d6fc28f6c0747ed50 SHA1 978a81f37201c1c4b752d7ac4501255d1361a4c9 SHA256 f5fbc360b18e48bcb85efcb90e5b22a83d368d4693e07d16745fd330b22b5276
-DIST genpatches-2.6.31-10.base.tar.bz2 240152 RMD160 e0d61d003634e7137e915f9e9c44f761b774d6d5 SHA1 d4e6ef579300d85b02d422196bd8fe3509f0c8f4 SHA256 73abf301b2f63f325f12bd93c53ceaa32623c9084b30c6795e6462046d67ef21
-DIST genpatches-2.6.31-10.extras.tar.bz2 24961 RMD160 20c268bccebfe31a2897359ae17534363d0136b4 SHA1 6ba14f68ce80068eb3e4abe1069848e85b6a31a1 SHA256 ccf0dc37d1a799bcc67bd9eb3e971b346af8495d1826d7d3f3711819812c2120
 DIST genpatches-2.6.31-11.base.tar.bz2 255895 RMD160 001a46ff30496a3b0960fe72bf52eb2f2a10d512 SHA1 c4a0160e51e1bf2e1ac10a74a457de5ce8b011fa SHA256 a3499d8942d76a8b1fdedace50417e8b8df20155ff6c987c34901e916a4ec508
 DIST genpatches-2.6.31-11.extras.tar.bz2 24940 RMD160 c492175a249866311f8f8ae10a221adffc855806 SHA1 0b08312cfde1b7cf8445661ea0d26a7b2a4a47a2 SHA256 301642e9874e0afde820dbbf650172552e898bf965f1598e1ec34ce0874c5d80
-DIST genpatches-2.6.31-7.base.tar.bz2 139031 RMD160 b98e4a6cc06109c2b091523cc69d10f60de16a7d SHA1 847ac168a2895f2a49bb557aa0760b5a0bca5280 SHA256 7da94e9ec89bcfe0622e2a1392103c7cac9dc3f5421c8e073b59512fb42b7443
-DIST genpatches-2.6.31-7.extras.tar.bz2 24961 RMD160 20c268bccebfe31a2897359ae17534363d0136b4 SHA1 6ba14f68ce80068eb3e4abe1069848e85b6a31a1 SHA256 ccf0dc37d1a799bcc67bd9eb3e971b346af8495d1826d7d3f3711819812c2120
-DIST genpatches-2.6.31-8.base.tar.bz2 173661 RMD160 8de33f63f130d8cf3750c4d379432c0ef06f02d6 SHA1 975439f30d39ebc177942aa78d73a7b4cbe8704f SHA256 e3d019ce31680c39be468c4698364ab58632ebbbf0602c2d4a87e72202d3f1e0
-DIST genpatches-2.6.31-8.extras.tar.bz2 24940 RMD160 c492175a249866311f8f8ae10a221adffc855806 SHA1 0b08312cfde1b7cf8445661ea0d26a7b2a4a47a2 SHA256 301642e9874e0afde820dbbf650172552e898bf965f1598e1ec34ce0874c5d80
-DIST genpatches-2.6.32-3.base.tar.bz2 127489 RMD160 2b46809102aa333eaeadb94507123a52306be115 SHA1 48674af66c7b1a90089e252e7f05c5cc6ef9f7fc SHA256 4b962e1b15aef953612951305af773000a7c254693943cb460e76fb6a82969d9
-DIST genpatches-2.6.32-3.extras.tar.bz2 24907 RMD160 eeec9ff9413181898d3d237be297f6429f2ec995 SHA1 59fb77c4b30cbf817cbcf97a73c5202ea3dcb6d3 SHA256 a37454100106e4e725ac92e5dac488c7dad5af765a90ce04e2cee9f47b37dd9e
-DIST genpatches-2.6.32-4.base.tar.bz2 176587 RMD160 bf80bb33db3252d8c64a41f740d57dee71559bfc SHA1 e282a90bef2ca4da5ad5d282380544f45b115680 SHA256 3e33de8583918c40edc3e0eacfaf8b90a5d703708d39626a819e0a0c79fa7284
-DIST genpatches-2.6.32-4.extras.tar.bz2 24907 RMD160 eeec9ff9413181898d3d237be297f6429f2ec995 SHA1 59fb77c4b30cbf817cbcf97a73c5202ea3dcb6d3 SHA256 a37454100106e4e725ac92e5dac488c7dad5af765a90ce04e2cee9f47b37dd9e
-DIST genpatches-2.6.32-5.base.tar.bz2 211946 RMD160 34d4e28a7c971763c291cb7a5e5d8f26b2af764a SHA1 4c09f779e7255923786121dc9afe6c70cbdc2e34 SHA256 b5425fbc6f8c73c6081c24934860ed1e14ceff362ed4bfc0651a1b696b93f5d4
-DIST genpatches-2.6.32-5.extras.tar.bz2 24910 RMD160 bc318816a33bf03d8b74049775ffeed7a48bff29 SHA1 c2511d0be24cc5e51029c8b0f3529201180646bd SHA256 cad64b3c2adc3bc742e29fa193174574d7f44e0decbfc36746f5c69a797275d8
-DIST genpatches-2.6.32-6.base.tar.bz2 210461 RMD160 e9d14e132a84514932769b094636a7199afb594f SHA1 9a71ad737e645d9af06b89bee1badcd2fbb04aa5 SHA256 b0ca29d85c9ae2e89714274125e7bc5133afac566ae6023e1b2b38eb9e260942
-DIST genpatches-2.6.32-6.extras.tar.bz2 24910 RMD160 bc318816a33bf03d8b74049775ffeed7a48bff29 SHA1 c2511d0be24cc5e51029c8b0f3529201180646bd SHA256 cad64b3c2adc3bc742e29fa193174574d7f44e0decbfc36746f5c69a797275d8
 DIST genpatches-2.6.32-7.base.tar.bz2 214590 RMD160 0e126044eb25dd414d0d4d7bb8c983946665cda1 SHA1 82ede3469b45b29cb19f50dc210fad43f6ca34eb SHA256 08e420df06c3882caf5afee21a70d69e45c1b9b5dc9278b133ec06ec236592a6
 DIST genpatches-2.6.32-7.extras.tar.bz2 24907 RMD160 eeec9ff9413181898d3d237be297f6429f2ec995 SHA1 59fb77c4b30cbf817cbcf97a73c5202ea3dcb6d3 SHA256 a37454100106e4e725ac92e5dac488c7dad5af765a90ce04e2cee9f47b37dd9e
 DIST genpatches-2.6.32-8.base.tar.bz2 246247 RMD160 6f3336e349a84b543b26b8e0e0535a6ec327406f SHA1 01bb370cad1c6b3b189f2dcf189396b6c8ab9307 SHA256 2cac1e1f85042fd2e5b707d6ddbba64f910326b18d5fb876514c007b787b3b1d
@@ -67,21 +54,20 @@ EBUILD gentoo-sources-2.6.28-r5.ebuild 773 RMD160 a975d9c7d4ef728c234ae69f78fe11
 EBUILD gentoo-sources-2.6.28-r6.ebuild 776 RMD160 7405de5c07710d7b4878867e799f6919cca1c07f SHA1 87256dee9cda53ecffa8ea193e70026c23ad8cf8 SHA256 8dcc7d65e8cd47b4cac973457fbddacb5cc6d244952a8e50f40e6fb1209ce25b
 EBUILD gentoo-sources-2.6.29-r5.ebuild 771 RMD160 268f4c0025dc9f5204289d32cdc400fa7e2d4fb4 SHA1 adbb1ede7016dde66e2b6359c3b5442386eff1aa SHA256 876aa2c3fd58230f11fb16cec0994396dbb980875c2f60c26c8af0f4a06bea4e
 EBUILD gentoo-sources-2.6.29-r6.ebuild 774 RMD160 c489b084b5e35f9865ea4f583e9fd5bdd844193a SHA1 e2f89aec934fd7cf070fb2345d383d084823f95b SHA256 dc5008c1a14a73007663f4c4912bbc5c7fad755b5741db1825b17617d56eb328
-EBUILD gentoo-sources-2.6.30-r5.ebuild 771 RMD160 4567be1c3c398decaabdc8dd0b684f121a285b97 SHA1 b0fe3278901f874f5796f499aafb16a78a8b0d1a SHA256 50a2cb3dafbec90fb54d5c34224f6127ff6c78b1ae797184bd6f2ec582b53399
 EBUILD gentoo-sources-2.6.30-r8.ebuild 770 RMD160 8259920bd5bf4cb718159acdd6926e1f961261a0 SHA1 59e772e397bfd2e5544b1e158108b959cc6498e1 SHA256 be24b44f66577a8711d64f544b632941122499b62c97e9fb7bd951be2df35a99
 EBUILD gentoo-sources-2.6.30-r9.ebuild 781 RMD160 4ecf6b4cd58712063f73c4cefd92758cbd2bd62c SHA1 9ad5d1dd1baf12c13222fc6f030c83b77a1e53e1 SHA256 6d3379fddc17632d137ee37363ae389c39877c815b36284c9cab4c8d3c1be8c5
 EBUILD gentoo-sources-2.6.31-r10.ebuild 768 RMD160 88902a194f3aae41a70c1475f298385309612d74 SHA1 b510953cba391bd4759d4ef47475aa6a498534be SHA256 d802876d2c816a49523ba57981b80da28404dc8dd0a02c06cb6cdd27573b7ef2
-EBUILD gentoo-sources-2.6.31-r6.ebuild 770 RMD160 db7037447d4f28443c1986479077eba39bf1a999 SHA1 05f23f046e6f90ad864decdadf23edaa4ec84fb6 SHA256 b09c4ea6d108a30887f047e971dc69995775585a48178535e2b0407f72a2f8b3
-EBUILD gentoo-sources-2.6.31-r7.ebuild 775 RMD160 fa03394609c853b2b8bf94b9e93e0915587907b3 SHA1 5561d915c6ca90ab7cbbf1e1d943d5f93b646021 SHA256 382cb429c7df77e28c06133158e4492df83894fdb9d627a1dfa55cd160160ca9
-EBUILD gentoo-sources-2.6.31-r9.ebuild 781 RMD160 cddd4a3da38465163bfaac9a779361843c458dfd SHA1 96dc4290f5044226954d65c34c09550d7306da27 SHA256 d84bbd9f11e2f98443106a3e951b2f231c98682b752a39ce3f7556539ba29f7e
-EBUILD gentoo-sources-2.6.32-r2.ebuild 780 RMD160 ed0082fb53bec14dc32e7214fb2070bfb8c6465f SHA1 ff8c230a1db0d0b6eff08542652e248ce6778001 SHA256 cc726c91674440c3a4ccceaff638eaab1c9b3e3cbeb6859c8fe55fade97ea138
-EBUILD gentoo-sources-2.6.32-r3.ebuild 780 RMD160 07baca316ec9e0d2e8c3abe1180d4f5ee4f9749a SHA1 64dd2b5d6e1b634d2a0c86478f3a223306aee103 SHA256 5ed2a73cbf334ac8a1155c3a778ad4552dca731b04133739ba506f4ad3038fe5
-EBUILD gentoo-sources-2.6.32-r4.ebuild 780 RMD160 c02cbd8f646d9f0a08db9d4f36a5aa0d1ca89534 SHA1 2ec5c1031d78b04f246317b77e0352d47574b34d SHA256 3b6a1177ad338a4a5c33b02eefa425488fe7da228e029a12254b64db12b4fe07
-EBUILD gentoo-sources-2.6.32-r5.ebuild 780 RMD160 92e7d1e356177a2c3110e41b3450c15825fa4a1e SHA1 fefc519710c4074de289c2bde986ec7d42b3d76c SHA256 0f152d89fc7c8dffc45e0890749fc40044d86497ee64ceac35c61cf08d9902af
 EBUILD gentoo-sources-2.6.32-r6.ebuild 780 RMD160 717229605ff38c53d4e9ce2a08cbe13f0e9e4a7f SHA1 c6201463ee7a59eec722354c906ed773ce28f88a SHA256 67e6a6cdb262a27daa570110cd95f013b9f64dfe29334515a1cf734be45ac41f
 EBUILD gentoo-sources-2.6.32-r7.ebuild 774 RMD160 33ff0716aa4c311a699d4cab88ee6f96be5aa0fc SHA1 335f84619cff5c0e5f90c09c1b5a8d609a25fabf SHA256 eebd947b0acfd4220a97ab374bc471740a2eb4345db524d24e414b67c1609896
 EBUILD gentoo-sources-2.6.32-r8.ebuild 780 RMD160 3ae47468fa78fdc64ccf9be9380e07735ac00f38 SHA1 e64d009113ee37691c449875a7f244293be96194 SHA256 b0a683ac7262eeaf4ea55b41421969a372e380de2f369d48e431c40763f28158
 EBUILD gentoo-sources-2.6.33-r1.ebuild 780 RMD160 6b698268362a5488cc4a71f8c2d3471b83628bce SHA1 4fc4fd123497db58967f400cc61aeceedda0465f SHA256 259130f6185b3afec54e8a03c460e630465ba477190354b2384795b2a8a1b073
 EBUILD gentoo-sources-2.6.33.ebuild 777 RMD160 70fa6e91228213fc4381ed39a42d632e0b467748 SHA1 1c007bc5cf504bdbe3e8093281d9574d603581ba SHA256 a55eab05df96f337134c3ec3aba91fce92b1c6e5e725ab7655c52ca998e18ccf
-MISC ChangeLog 130523 RMD160 6c8c80458e55aafed98eb96f0580d2bcc9242f55 SHA1 ae35933e5ad092335c03f784fc8df6a6d708ce7f SHA256 549b89a5a6b84b926c277cc19fb9ae55358ddf36565323c6c8ee7c6cf563b50e
+MISC ChangeLog 130881 RMD160 03f5b6696dc2916b9170f94a54a2acc2aca87f62 SHA1 462083cdb9b09206d897a490a861a54cf2d29b1a SHA256 98b91b0504251b23e765503c4b1bc229751a1e27e7ea1d675ed4a5b702a6c255
 MISC metadata.xml 257 RMD160 5e7bcce4888d16cd53f1d01287a0bffdf6cf2f86 SHA1 1a6391a3451664bc2aaf2a97761e5ca9ec6c3488 SHA256 148c28ec7bb4708997895803f553b7c7a643672c85dfb5e68b587d2da6c9ecec
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iEYEARECAAYFAkvAZ6QACgkQPDPGULV25OOuYACgohLsh2KrzpTt02Wk7hUyFNUd
+4ykAniAzRCDpFXnBOUMt2EdsiypkdzpW
+=8R2W
+-----END PGP SIGNATURE-----
