@@ -1,6 +1,13 @@
 # ChangeLog for sys-kernel/gentoo-sources
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.690 2010/04/09 19:09:41 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.691 2010/04/10 11:57:13 mpagano Exp $
+
+  10 Apr 2010; Michael Pagano <mpagano@gentoo.org>
+  -gentoo-sources-2.6.30-r5.ebuild, -gentoo-sources-2.6.31-r6.ebuild,
+  -gentoo-sources-2.6.31-r7.ebuild, -gentoo-sources-2.6.31-r9.ebuild,
+  -gentoo-sources-2.6.32-r2.ebuild, -gentoo-sources-2.6.32-r3.ebuild,
+  -gentoo-sources-2.6.32-r4.ebuild, -gentoo-sources-2.6.32-r5.ebuild:
+  Cleanup of old versions
 
   09 Apr 2010; Raúl Porcel <armin76@gentoo.org>
   gentoo-sources-2.6.32-r7.ebuild:
